hphp/test/zend/bad/ext/opcache/tests/issue0128.php
<?php
var_dump(opcache_invalidate('1'));
var_dump("okey");
?>